--- a/docs/dfst-docker-guide/getting-started/dfst-container-quick-start-01.dita
+++ b/docs/dfst-docker-guide/getting-started/dfst-container-quick-start-01.dita
@@ -3,15 +3,20 @@
 <task id="Untitled9">
     <title>DFST Container Quick Start</title>
     <shortdesc>If you are familiar with Docker you can follow these instructions to get going as
-    quickly as possible. </shortdesc>
+    quickly as possible. NOTE: These instructions are really just a placeholder. Once we have a
+    complete set of composed Docker containers it will not be necessary to get and run the
+    containers individually.</shortdesc>
     <taskbody>
     <prereq>
       <ul id="ul_gf1_s54_t5">
         <li>
           <p>On Windows and OS X you must have the <xref keyref="website-docker-toolbox">Docker
               Toolbox</xref> installed and running. See the Docker documentation for details on how
-            to run Docker. All Docker commands are run from the Docker command window or through the
-            Docker Kitematic user interface.</p>
+            to run Docker. All Docker commands are run from the Docker command window (Windows) or
+            from a terminal window with the Docker environment set (OS X).</p>
+          <p>Under OS X you can use the Kitematic application to start a new Docker window or you
+            can use the command:<codeblock>eval $(docker-machine env default)</codeblock></p>
+          <p>To set the Docker environment in your current terminal window.</p>
         </li>
       </ul>
     </prereq>
