--- a/docs/dfst-docker-guide/docker-container-ref/container-ref-dfst-dita-ot.dita
+++ b/docs/dfst-docker-guide/docker-container-ref/container-ref-dfst-dita-ot.dita
@@ -12,10 +12,9 @@
         Toolkit team. You can use it directly if you don't need any custom plugins or you can use at
         as the base for a custom container that configures the Open Toolkit to suit your needs.</p>
       <p>The Open Toolkit container is required by the <xref
-          keyref="container-ref-link-manager-basex"/> container, which
-        uses its catalogs. It is also required by the <xref
-          keyref="container-ref-gitlab-ce/container-ref-gitlab"/> container, which uses it for
-        running Open Toolkit build jobs.</p>
+          keyref="container-ref-link-manager-basex"/> container, which uses its catalogs. It is also
+        required by the <xref keyref="container-ref-dfst-gitlab/container-ref-gitlab"/> container,
+        which uses it for running Open Toolkit build jobs.</p>
     </section>
     <section spectitle="Container Details">
       <dl>
